style: :lipstick: fixing gap between div

--- a/src/app/forgot-password/forgot-password.css
+++ b/src/app/forgot-password/forgot-password.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
 }
 
 .title-container {
@@ -23,15 +24,15 @@
 }
 
 .form-container {
-  display: flex;
-  min-height: 480px;
+  display: flex;  
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  & .form-sub-container {
+  margin-bottom: 20%;
+  /* & .form-sub-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-  }
+  } */
 }
