--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -1,13 +1,14 @@
 .main-container {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-between;
   flex-direction: column;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
 }
 
 .title-container {
   display: flex;
-  justify-content: center;
+  justify-content: center;  
   & .title-sub-container {
     display: flex;
     justify-content: center;
@@ -19,18 +20,19 @@
       font-weight: 500;
     }
   }
+  
 }
 
 .form-container {
   display: flex;
-  min-height: 480px;
+  margin-bottom: 20%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  & .form-sub-container {
+  /* & .form-sub-container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-  }
+  } */
 }
